[tool.poetry]
name = "homework14-1"
version = "0.1.0"
description = ""
authors = ["Linar Khamidulin <hamidulin16@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework14"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
mypy = "^1.13.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''